# test-be

./: .gitignore  README.md  docker-compose.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: health.py
apps/api/app/core/: config.py
apps/api/app/integrations/: redis.py  sentry.py
apps/api/tests/: test_health.py
apps/deep-ecg-analysis/: README.md  alembic.ini  pyproject.toml
apps/deep-ecg-analysis/app/core/: config.py  logging.py
apps/deep-ecg-analysis/app/db/models/: __init__.py
apps/deep-ecg-analysis/migrations/: env.py
apps/deep-ecg-analysis/tests/: test_config.py  test_health_ready.py
scripts/: ci.sh  create-app  create-worker  remove-service
templates/worker/: README.md  pyproject.toml
templates/worker/app/: worker.py
templates/worker/app/core/: config.py
templates/worker/app/db/: session.py
templates/worker/app/db/models/: __init__.py
